Fix background and alignment

--- a/src/Framework/assets/css/style.css
+++ b/src/Framework/assets/css/style.css
@@ -5,6 +5,7 @@
     padding: 20px;
     margin: 2px 0;
     max-width: 320px;
+    text-align: center;
 }
 .ost-alert-gopro a.ost-alert-btn{
     border-radius: 3px;
@@ -27,7 +28,7 @@
     /* 5 */
     /* 6 */
     padding: 0 12px;
-    background: #ed8034;
+    background: #075c97;
     color: #ffffff;
     box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
     font-weight: 400;
